[gd_scene load_steps=10 format=2]

[ext_resource path="res://menu/victory_menu/victory_menu.gd" type="Script" id=1]
[ext_resource path="res://menu/ChiKareGo2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://world/white_texture.png" type="Texture" id=3]
[ext_resource path="res://menu/Chicago.tres" type="DynamicFont" id=4]
[ext_resource path="res://MenuAccept.tscn" type="PackedScene" id=5]
[ext_resource path="res://MenuSelect.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="VictoryMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0.45098 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 31.0
margin_top = 34.0
margin_right = 288.0
margin_bottom = 146.0
custom_constants/separation = 20

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 257.0
margin_bottom = 38.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer4"]
margin_right = 257.0
margin_bottom = 38.0
custom_constants/separation = -4

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer"]
margin_right = 257.0
margin_bottom = 30.0
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 80.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.764706, 0.160784, 0.0627451, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "V"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 92.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.87451, 0.517647, 0.168627, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "I"

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 112.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.886275, 0.819608, 0.533333, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "C"

[node name="Label4" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/HBoxContainer"]
margin_left = 116.0
margin_right = 132.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.564706, 0.74902, 0.435294, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "T"

[node name="Label5" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 152.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.490196, 0.72549, 0.843137, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "O"

[node name="Label6" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/HBoxContainer"]
margin_left = 156.0
margin_right = 172.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.145098, 0.301961, 0.662745, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "R"

[node name="Label7" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/HBoxContainer"]
margin_left = 176.0
margin_right = 192.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.541176, 0.2, 0.721569, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Y"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer"]
margin_top = 26.0
margin_right = 257.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "You protected the colors of the world, thank you."
align = 1
valign = 1

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 257.0
margin_bottom = 92.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 86.0
margin_right = 170.0
margin_bottom = 34.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 84.0
margin_bottom = 15.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer"]
margin_right = 7.0
margin_bottom = 15.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer"]
margin_left = 11.0
margin_right = 84.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Main Menu"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 19.0
margin_right = 84.0
margin_bottom = 34.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer2"]
margin_right = 7.0
margin_bottom = 15.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 11.0
margin_right = 84.0
margin_bottom = 15.0
rect_min_size = Vector2( 73, 0 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Exit"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 257.0
margin_bottom = 112.0

[node name="MenuSelect" parent="." instance=ExtResource( 6 )]

[node name="MenuAccept" parent="." instance=ExtResource( 5 )]
